--- a/app/src/main/res/layout/activity_q31_to_q37_screen.xml
+++ b/app/src/main/res/layout/activity_q31_to_q37_screen.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:scrollbars="vertical|horizontal"
             android:fillViewport="true" android:layout_marginLeft="0dp"
-            android:layout_alignParentTop="true" android:layout_alignParentStart="true">
+            android:layout_alignParentTop="true" android:layout_alignParentStart="true" android:layout_marginTop="60dp">
 
         <TableLayout
                 android:layout_width="match_parent"
